Update to Java 11, Remove deprecated code, Update bytecode generation